pyramid custom-material

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,10 +1,10 @@
 .canvas{
     min-height: 400px;
-    height: 55vh;
+    height: 70vh;
 
-    background-color: beige;
+    background-color: rgb(11, 11, 11);
 
-    border: solid salmon;
+    border: solid rgb(255, 155, 105);
 
     margin-bottom: 2em;
 }
