--- a/styles/global.css
+++ b/styles/global.css
@@ -7,21 +7,18 @@
 
 :root {
 
-    --bg-color: rgb(10,10,10);
-    --text-color: rgb(255, 200, 118);
+    --bg-color: rgb(15, 15, 15);
+    --text-color: rgb(255, 210, 193);
 }
 
-body {
+html,
+body, 
+#__next {
 
     font-family: "Bebas Neue", cursive;
     font-weight: 400;
 
-    background-color: var(--bg-color);
-    color: var(--text-color);
-
+    margin: 0;
     height: 100%;
-    max-width: 1080px;
-    margin: auto;
-    padding: 0px 20px 20px 20px;
 
 }
