--- a/styles/layout.css
+++ b/styles/layout.css
@@ -8,22 +8,25 @@
 .header{
 
     position: relative;
-
-    max-width: 1080px;
     display: flex;
 
-    margin-inline: auto;
-
-    justify-content: center;
     align-items: center;
-    gap: 10vw;
-    height: 80px;
+    padding: 1rem 2rem 0rem 2rem;
+    gap: 1rem;
+    height: fit-content;
+
+}
+
+.header > *:nth-child(1){
+    margin-inline-end: auto;
 }
 
 .main{
 
+    position: relative;
+
     max-width: 1080px;
     margin-inline: auto;
-    height: inherit;
+    height: fit-content;
 
 }
