--- a/styles/global.css
+++ b/styles/global.css
@@ -7,13 +7,16 @@
 
 :root {
 
-    --bg-color: rgb(15, 15, 15);
-    --text-color: rgb(255, 210, 193);
+    --bg-color: #080808;
+    --text-color: #e1e1e1;
 }
 
 html,
 body, 
 #__next {
+
+    background-color: var(--bg-color);
+    color: var(--text-color);
 
     font-family: "Bebas Neue", cursive;
     font-weight: 400;
