--- a/styles/global.css
+++ b/styles/global.css
@@ -10,8 +10,9 @@ body{
     height: 100%;
     margin: 0;
 
-    font-family: 'Cairo', sans-serif;
+    font-family: "Poppins", sans-serif;
     background-color: #FAEDCD;
+    color: rgb(20, 20, 20);
 
     overflow: scroll;
 }
