--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -3,7 +3,7 @@
     grid-template-columns: auto minmax(0, 1fr);
 
     margin-inline: auto;
-    max-width: 1700px;
+    max-width: 90vw;
     
 }
 
@@ -16,5 +16,5 @@
 .nav{
     position: sticky;
     top: 0;
-    height: fit-content;
+    height: 100svh;
 }
