big commit, lots of changes, too many to list

--- a/styles/landing.module.css
+++ b/styles/landing.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     flex-direction: column;
     gap: 2rem;
-    height: 100svh;
+    height: 100vh;
 }
 
 .canvasContainer {
