--- a/styles/works.module.css
+++ b/styles/works.module.css
@@ -1,37 +1,99 @@
-.works {
-    height: 100svh;
-}
-
-.projects{
+.cardContainer{
     display: flex;
     flex-direction: column;
-    height: inherit;
+    gap: 5rem;
 }
 
-.projects > * {
-    font-size: 4rem;
-    font-weight: 400;
-    width: fit-content;
+.card{
+    display: grid;
+    grid-template-areas:
+        " pic  title "
+        " pic  description "
+    ;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: min-content 1fr;
+    gap: 2rem;
 
-    text-decoration: none;
-    text-transform: uppercase;
-    color: black;
-
-    transition: letter-spacing 0.5s, color 0.5s;
+    height: fit-content;
+    width: 90%;
 }
 
-.projects > *:hover{
-    letter-spacing: 0.1rem;
+.picture{
+    position: relative;
+    grid-area: pic;
+    height: 25vw;
+    width: 25vw;
+}
+.picture > * {
+    object-fit: cover;
 }
 
-.ruleContainer {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+.title{
+    grid-area: title;
+    font-size: 6rem;
+    text-align: right;
+
 }
 
-.rule {
-    width: 100%;
-    border-bottom: solid 2px black;
+.description{
+    grid-area: description;
+    font-size: 1rem;
+    text-align: right;
+}
+
+
+@media screen and (max-width: 1600px) {
+    .title{
+        font-size: 5rem;
+    }
+    .description{
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .title{
+        font-size: 4rem;
+    }
+    .description{
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .title{
+        font-size: 3rem;
+    }
+    .description{
+        font-size: 0.8rem;
+    }
+}
+
+
+@media screen and (max-width: 1000px) {
+    .card{
+        grid-template-areas:
+            "pic"
+            "title"
+            "description"
+        ;
+        grid-template-columns: auto;
+        grid-template-rows: auto min-content min-content;
+        gap: 0rem;
+    }
+    .title{
+        font-size: 3rem;
+        font-weight: 600;
+        text-align: left;
+    }
+    .description{
+        font-size: 0.8rem;
+        text-align: left;
+    }
+    .picture{
+        position: relative;
+        grid-area: pic;
+        height: 90svw;
+        width: 90svw;
+    }
 }
