--- a/styles/global.css
+++ b/styles/global.css
@@ -10,7 +10,7 @@ body{
     height: 100%;
     margin: 0;
 
-    font-family: "Poppins", sans-serif;
+    font-family: "Jost", sans-serif;
     background-color: #FAEDCD;
     color: rgb(20, 20, 20);
 
