--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -1,20 +1,37 @@
 .grid{
     display: grid;
     grid-template-columns: auto minmax(0, 1fr);
-
+    grid-template-areas:
+        "nav main"
+    ;
     margin-inline: auto;
     max-width: 90vw;
-    
 }
 
 .main{
-    grid-column: 2;
+    /* grid-column: 2; */
+    grid-area: main;
     height: fit-content;
-    padding-inline: 1rem;
 }
 
 .nav{
     position: sticky;
     top: 0;
-    height: 100svh;
+    height: fit-content;
+    grid-area: nav;
+    margin-right: 3rem;
+}
+
+@media screen and (max-width: 1000px) {
+    .grid{
+        display: block;
+        max-width: 95vw;
+    }
+
+    .nav{
+        position: absolute;
+        margin-right: 2rem;
+        right: 0;
+        z-index: 1;
+    }
 }
