--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -9,12 +9,11 @@
 }
 
 .main{
-    /* grid-column: 2; */
     grid-area: main;
     height: fit-content;
 }
 
-.nav{
+.navDesktop{
     position: sticky;
     top: 0;
     height: fit-content;
@@ -22,16 +21,31 @@
     margin-right: 3rem;
 }
 
+.navMobile{
+    display: none;
+    position: absolute;
+    background-color: #FAEDCD;
+    width: 95vw;
+    height: 100%;
+    z-index: 1;
+}
+
+.burger{
+    position: absolute;
+    font-size: 1.2rem;
+    margin-right: 2rem;
+    z-index: 10;
+    top: 3rem;
+    right: 0;
+
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 1000px) {
     .grid{
         display: block;
         max-width: 95vw;
-    }
-
-    .nav{
-        position: absolute;
-        margin-right: 2rem;
-        right: 0;
-        z-index: 1;
     }
 }
